test/core/errors/offsets_error/zs/constant_error.zs
package constant_error;

const uint32 CONST = 1;

struct ConstantError
{
    uint32 arr[];
CONST:
    uint32 value;
};
